--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^9.4.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "react": "18.0.0",
@@ -18,6 +19,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
